Fix a bug in the navbar (z-index).

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ a {
   color: var(--white-shade);
 }
 nav {
+  z-index: 2;
   display: flex;
   justify-content: space-between;
   padding: 1rem;
